# django-blog

./: .gitignore  README.md  TODO.md  requirements.txt  requirements_py36.txt  setup.cfg  setup.py
src/accounts/: forms.py  views.py
src/accounts/api/: serializers.py  urls.py  views.py
src/blog/: settings.py  urls.py
src/comments/: admin.py  models.py  urls.py  views.py
src/comments/api/: serializers.py  urls.py  views.py
src/comments/migrations/: 0001_initial.py  0002_auto_20170320_1944.py
src/comments/templates/: comment_thread.html  confirm_delete.html
src/posts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
src/posts/api/: pagination.py  permissions.py  serializers.py  urls.py  views.py
src/posts/migrations/: 0001_initial.py  0002_post_user.py  0003_auto_20160721_1937.py  0004_auto_20170319_1345.py  0005_auto_20170319_1346.py  0006_auto_20170319_1349.py  0007_post_read_time.py
src/posts/templates/: post_detail.html  post_form.html  post_list.html
src/posts/templatetags/: urlify.py
src/static/css/: base.css
src/static/js/: markdown.js  scripts.js
src/templates/: base.html  comment_thread.html  form.html  messages_display.html  post_detail.html  post_list.html
