[metadata]
name = django-blog
version = 0.1
description = A Django blog
author = André da Silva
author_email = andre.da-silva@outlook.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.8  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src